feat: enhance library management system